manifest_template/1-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: &&build_namespace
  labels:
    name: &&build_namespace
