manifest_template/5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &&build_deployment-service
  namespace: &&build_namespace
spec:
  type: ClusterIP
  ports:
  - name: &&build_deployment-service-port
    port: &&port
    protocol: TCP
    targetPort: &&port
  selector:
        app: &&build_deployment
